<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_kubus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume_kubus"
        />

    <Button
        android:id="@+id/btn_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume_balok"
        />

    <Button
        android:id="@+id/btn_prisma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume_prisma"
        />

    <Button
        android:id="@+id/btn_limas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume_limas"
        />

</LinearLayout>