<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KubusActivity" >

    <TextView
        android:id="@+id/tv_panjang_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/panjang" />

    <EditText
        android:id="@+id/ed_panjang_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_lebar_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/lebar" />

    <EditText
        android:id="@+id/ed_lebar_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_tinggi_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tinggi" />

    <EditText
        android:id="@+id/ed_tinggi_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_rumus_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rumus_balok"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_hitung_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung" />

    <TextView
        android:id="@+id/tv_jawab_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jawab"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_hasil_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="64sp"
        android:textStyle="bold" />
</LinearLayout>